--- a/sass/partials/components/_history.scss
+++ b/sass/partials/components/_history.scss
@@ -38,7 +38,7 @@
                 // height:auto;
                 width: 30%;
                 background: #fff;
-                margin: 5px auto;
+                margin: 5px;
             }
             // remove any bad images coming through
             #mySavedImg5c8ea4bc1f1ab8000434e9b0 {
